--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
     "flask-cors>=6.0.1",
+    "google-cloud-storage>=3.4.0",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
 ]
